# CalculatorBIR

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  ds
evaluate/: evaluate.hpp
interface/: Sintax.cpp  Sintax.h  calculatorbir.cpp  calculatorbir.h  calculatorbir.ui  interface.cpp  interface.h  interface.pro  main.cpp
src/: Sintax.cpp  Sintax.hpp  binary_tree.cpp  binary_tree.hpp  binary_tree_main.cpp  evaluate.cpp  evaluate.hpp  evaluate.hpp.orig  evaluate1.cpp  main.cpp  main.cpp.BASE.5433.cpp  main.cpp.LOCAL.5433.cpp
